@@ -2,6 +2,7 @@
  * Pass several Unix signals through to child processes like Borg. This means that Borg now properly
    shuts down if borgmatic is terminated (e.g. due to a system suspend).
  * #29: Support for using tilde in repository paths to reference home directory.
+ * #42: Support for Borg --files-cache option for setting the files cache operation mode.
 
 1.1.9
  * #16, #38: Support for user-defined hooks before/after backup, or on error.
